// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text rendering return value should render a text string when there are no additional props provided 1`] = `"Hello, world!"`;

exports[`Text rendering return value should render a text string when there are no additional props provided 2`] = `"This is another string that is just some text. I'm not sure how helpful this is though."`;

exports[`Text rendering return value should render as a span if a font weight is provided 1`] = `
<span
  className="md-typography md-typography--light"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a font weight is provided 2`] = `
<span
  className="md-typography md-typography--regular"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a font weight is provided 3`] = `
<span
  className="md-typography md-typography--medium"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a font weight is provided 4`] = `
<span
  className="md-typography md-typography--semibold"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a font weight is provided 5`] = `
<span
  className="md-typography md-typography--bold"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 1`] = `
<span
  className="md-typography md-typography--left"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 2`] = `
<span
  className="md-typography md-typography--center"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 3`] = `
<span
  className="md-typography md-typography--right"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 4`] = `
<span
  className="md-typography md-typography--inherit"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 5`] = `
<span
  className="md-typography md-typography--initial"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text alignment is provided 6`] = `
<span
  className="md-typography md-typography--justify"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 1`] = `
<span
  className="md-typography md-typography--line-through"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 2`] = `
<span
  className="md-typography md-typography--overline"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 3`] = `
<span
  className="md-typography md-typography--underline"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 4`] = `
<span
  className="md-typography md-typography--none"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 5`] = `
<span
  className="md-typography md-typography--inherit"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as a span if a text decoration is provided 6`] = `
<span
  className="md-typography md-typography--initial"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 1`] = `
<h1
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 2`] = `
<h2
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 3`] = `
<h3
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 4`] = `
<h4
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 5`] = `
<h5
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 6`] = `
<h6
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 7`] = `
<h6
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 8`] = `
<h6
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 9`] = `
<span
  className="md-typography md-typography--body-1"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 10`] = `
<span
  className="md-typography md-typography--body-2"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 11`] = `
<caption
  className="md-typography md-typography--caption"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 12`] = `
<span
  className="md-typography md-typography--button"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the correct tag based on the type prop 13`] = `
<span
  className="md-typography md-typography--overline"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 1`] = `
<h1
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 2`] = `
<h1
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 3`] = `
<h1
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 4`] = `
<h1
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 5`] = `
<h1
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 6`] = `
<h1
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 7`] = `
<h1
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 8`] = `
<h1
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 9`] = `
<h1
  className="md-typography md-typography--caption"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 10`] = `
<h1
  className="md-typography md-typography--button"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 11`] = `
<h1
  className="md-typography md-typography--overline"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 12`] = `
<h2
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 13`] = `
<h2
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 14`] = `
<h2
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 15`] = `
<h2
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 16`] = `
<h2
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 17`] = `
<h2
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 18`] = `
<h2
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 19`] = `
<h2
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 20`] = `
<h2
  className="md-typography md-typography--caption"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 21`] = `
<h2
  className="md-typography md-typography--button"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 22`] = `
<h2
  className="md-typography md-typography--overline"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 23`] = `
<h3
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 24`] = `
<h3
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 25`] = `
<h3
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 26`] = `
<h3
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 27`] = `
<h3
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 28`] = `
<h3
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 29`] = `
<h3
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 30`] = `
<h3
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 31`] = `
<h3
  className="md-typography md-typography--caption"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 32`] = `
<h3
  className="md-typography md-typography--button"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 33`] = `
<h3
  className="md-typography md-typography--overline"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 34`] = `
<h4
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 35`] = `
<h4
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 36`] = `
<h4
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 37`] = `
<h4
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 38`] = `
<h4
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 39`] = `
<h4
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 40`] = `
<h4
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 41`] = `
<h4
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 42`] = `
<h4
  className="md-typography md-typography--caption"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 43`] = `
<h4
  className="md-typography md-typography--button"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 44`] = `
<h4
  className="md-typography md-typography--overline"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 45`] = `
<h5
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 46`] = `
<h5
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 47`] = `
<h5
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 48`] = `
<h5
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 49`] = `
<h5
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 50`] = `
<h5
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 51`] = `
<h5
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 52`] = `
<h5
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 53`] = `
<h5
  className="md-typography md-typography--caption"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 54`] = `
<h5
  className="md-typography md-typography--button"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 55`] = `
<h5
  className="md-typography md-typography--overline"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 56`] = `
<h6
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 57`] = `
<h6
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 58`] = `
<h6
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 59`] = `
<h6
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 60`] = `
<h6
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 61`] = `
<h6
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 62`] = `
<h6
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 63`] = `
<h6
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 64`] = `
<h6
  className="md-typography md-typography--caption"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 65`] = `
<h6
  className="md-typography md-typography--button"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 66`] = `
<h6
  className="md-typography md-typography--overline"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 67`] = `
<p
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 68`] = `
<p
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 69`] = `
<p
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 70`] = `
<p
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 71`] = `
<p
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 72`] = `
<p
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 73`] = `
<p
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 74`] = `
<p
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 75`] = `
<p
  className="md-typography md-typography--caption"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 76`] = `
<p
  className="md-typography md-typography--button"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 77`] = `
<p
  className="md-typography md-typography--overline"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 78`] = `
<caption
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 79`] = `
<caption
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 80`] = `
<caption
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 81`] = `
<caption
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 82`] = `
<caption
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 83`] = `
<caption
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 84`] = `
<caption
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 85`] = `
<caption
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 86`] = `
<caption
  className="md-typography md-typography--caption"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 87`] = `
<caption
  className="md-typography md-typography--button"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 88`] = `
<caption
  className="md-typography md-typography--overline"
>
  Hello, world!
</caption>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 89`] = `
<span
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 90`] = `
<span
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 91`] = `
<span
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 92`] = `
<span
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 93`] = `
<span
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 94`] = `
<span
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 95`] = `
<span
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 96`] = `
<span
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 97`] = `
<span
  className="md-typography md-typography--caption"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 98`] = `
<span
  className="md-typography md-typography--button"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 99`] = `
<span
  className="md-typography md-typography--overline"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 100`] = `
<div
  className="md-typography md-typography--headline-1"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 101`] = `
<div
  className="md-typography md-typography--headline-2"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 102`] = `
<div
  className="md-typography md-typography--headline-3"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 103`] = `
<div
  className="md-typography md-typography--headline-4"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 104`] = `
<div
  className="md-typography md-typography--headline-5"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 105`] = `
<div
  className="md-typography md-typography--headline-6"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 106`] = `
<div
  className="md-typography md-typography--subtitle-1"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 107`] = `
<div
  className="md-typography md-typography--subtitle-2"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 108`] = `
<div
  className="md-typography md-typography--caption"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 109`] = `
<div
  className="md-typography md-typography--button"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName even if the type prop is set 110`] = `
<div
  className="md-typography md-typography--overline"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName prop 1`] = `
<h1
  className="md-typography"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided tagName prop 2`] = `
<h2
  className="md-typography"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided tagName prop 3`] = `
<h3
  className="md-typography"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided tagName prop 4`] = `
<h4
  className="md-typography"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided tagName prop 5`] = `
<h5
  className="md-typography"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided tagName prop 6`] = `
<h6
  className="md-typography"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided tagName prop 7`] = `
<p
  className="md-typography"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided tagName prop 8`] = `
<span
  className="md-typography"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided tagName prop 9`] = `
<div
  className="md-typography"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided tagName prop 10`] = `
<button
  className="md-typography"
>
  Hello, world!
</button>
`;

exports[`Text rendering return value should render as the provided tagName prop 11`] = `
<caption
  className="md-typography"
>
  Hello, world!
</caption>
`;

exports[`Text should provide the className if the children is a callback function 1`] = `
<div
  className="md-typography md-typography--left"
>
  Hello, world!
</div>
`;
